--- a/laboratorio completo/css/style.css
+++ b/laboratorio completo/css/style.css
@@ -5,6 +5,13 @@ div.gallery-container {
     grid-template-columns: 33% 33% 33%;
 }
 
+.col-md text-center{
+    display: grid;
+    grid-gap: .3%;
+    grid-template-columns: 33% 33% 33%;
+
+}
+
 .photo-block {
     text-align: center;
     border: 1px solid gray;
